@@ -24,9 +24,8 @@ struct netent *getnetent(void) {
   char *last;
   int aliasidx;
   if (netfd<0) {
-    netfd=open(_PATH_NETWORKS,O_RDONLY);
+    netfd=open(_PATH_NETWORKS,O_RDONLY|O_CLOEXEC);
     if (netfd<0) return 0;
-    fcntl (netfd, F_SETFD, FD_CLOEXEC);
     netlen=lseek(netfd,0,SEEK_END);
     netmap=mmap(0,netlen,PROT_READ|PROT_WRITE,MAP_PRIVATE,netfd,0);
     if ((long)netmap==(-1)) goto error;
