@@ -26,9 +26,8 @@ void setutxent() {
   sigset_t oldset, *savedset;
 
   savedset = __utmp_block_signals(&oldset);
-  if (fd<0) fd = open(utmp_file_name,O_RDWR);
-  if (fd<0) fd = open(utmp_file_name,O_RDONLY);
-  fcntl (fd, F_SETFD, FD_CLOEXEC);
+  if (fd<0) fd = open(utmp_file_name,O_RDWR|O_CLOEXEC);
+  if (fd<0) fd = open(utmp_file_name,O_RDONLY|O_CLOEXEC);
   utmp_current = lseek(fd,0,SEEK_SET);
   if (savedset)
       sigprocmask (SIG_SETMASK, savedset, 0);
