@@ -4,9 +4,8 @@
 #include <utmp.h>
 
 void updwtmp(const char *wtmp_file, const struct utmp *ut) {
-  int fd = open(wtmp_file, O_WRONLY|O_APPEND);
+  int fd = open(wtmp_file, O_WRONLY|O_APPEND|O_CLOEXEC);
   if (fd<0) return;
-  fcntl (fd, F_SETFD, FD_CLOEXEC);
   write(fd, ut, sizeof(struct utmp));
   close(fd);
 }
